syntax = "proto3";

option csharp_namespace = "Eternity.Proto";
package Eternity.Proto;


message MessageToServer {

}