syntax = "proto3";

option csharp_namespace = "Eternity.Proto";

package Eternity.Proto;

import "Placements.proto";

// BigInteger? How do we serialize that?
// https://stackoverflow.com/questions/40612798/protobuff-serialise-system-numerics-biginteger
message BigInteger {
	bytes bytes = 1;
}


message UnexploredTreeNode {}

message UnsuccessfulPlacementTreeNode {}

message FullyExploredTreeNode {
	BigInteger NodesExplored = 1;
	repeated Placements Solutions = 2;
}

message TreeNode {
	oneof Instance {
		UnexploredTreeNode Unexplored = 1;
		UnsuccessfulPlacementTreeNode UnsuccessfulPlacement = 2;
		FullyExploredTreeNode FullyExplored = 3;
		PartiallyExploredTreeNode PartiallyExplored = 4;
	}
}

message PartiallyExploredTreeNode {
	repeated TreeNode ChildNodes = 1;
}